; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ntb/if_ntb/extr_if_ntb.c_ntb_net_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ntb/if_ntb/extr_if_ntb.c_ntb_net_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ntb_net_ctx = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@IFF_DRV_RUNNING = common dso_local global i32 0, align 4
@IFF_DRV_OACTIVE = common dso_local global i32 0, align 4
@LINK_STATE_UP = common dso_local global i32 0, align 4
@LINK_STATE_DOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @ntb_net_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ntb_net_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.ntb_net_ctx*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.ntb_net_ctx*
  store %struct.ntb_net_ctx* %6, %struct.ntb_net_ctx** %3, align 8
  %7 = load %struct.ntb_net_ctx*, %struct.ntb_net_ctx** %3, align 8
  %8 = getelementptr inbounds %struct.ntb_net_ctx, %struct.ntb_net_ctx* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @IFF_DRV_RUNNING, align 4
  %12 = load i32, i32* @IFF_DRV_OACTIVE, align 4
  %13 = call i32 @if_setdrvflagbits(i32 %10, i32 %11, i32 %12)
  %14 = load i32, i32* %4, align 4
  %15 = load %struct.ntb_net_ctx*, %struct.ntb_net_ctx** %3, align 8
  %16 = getelementptr inbounds %struct.ntb_net_ctx, %struct.ntb_net_ctx* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @ntb_transport_link_speed(i32 %20)
  %22 = call i32 @if_setbaudrate(i32 %14, i32 %21)
  %23 = load i32, i32* %4, align 4
  %24 = load %struct.ntb_net_ctx*, %struct.ntb_net_ctx** %3, align 8
  %25 = getelementptr inbounds %struct.ntb_net_ctx, %struct.ntb_net_ctx* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i64 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i64 @ntb_transport_link_query(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %1
  %33 = load i32, i32* @LINK_STATE_UP, align 4
  br label %36

34:                                               ; preds = %1
  %35 = load i32, i32* @LINK_STATE_DOWN, align 4
  br label %36

36:                                               ; preds = %34, %32
  %37 = phi i32 [ %33, %32 ], [ %35, %34 ]
  %38 = call i32 @if_link_state_change(i32 %23, i32 %37)
  ret void
}

declare dso_local i32 @if_setdrvflagbits(i32, i32, i32) #1

declare dso_local i32 @if_setbaudrate(i32, i32) #1

declare dso_local i32 @ntb_transport_link_speed(i32) #1

declare dso_local i32 @if_link_state_change(i32, i32) #1

declare dso_local i64 @ntb_transport_link_query(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
